[package]
name = "vira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.4.3"    # ELF parser

# Disassembler and Assembler
[dependencies.iced-x86]
version = "1.15.0"
features = ["code_asm"]
